--- a/frontend/formacao-html-e-css/html5-css3-primeiros-passos/style.css
+++ b/frontend/formacao-html-e-css/html5-css3-primeiros-passos/style.css
@@ -1,8 +1,22 @@
 body {
   background: #CCCCCC;
 }
+
+#banner {
+  width: 100%;
+}
+
+h1 {
+  text-align: center;
+  background: #CCCCCC;
+}
+
 p {
   text-align: center;
+}
+
+#missao {
+  font-size: 20px;
 }
 
 em strong {
