--- a/frontend/formacao-html-e-css/html5-css3-posicionamento-listas-navegacao/produtos.css
+++ b/frontend/formacao-html-e-css/html5-css3-posicionamento-listas-navegacao/produtos.css
@@ -27,3 +27,18 @@ nav a{
   text-transform: uppercase;
   font-size: 22px;
 }
+
+.produtos {
+  width: 940px;
+  margin: 0 auto;
+}
+
+.produtos li{
+  width: 30%;
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+  padding: 50px 0;
+  margin: 0 1.5%;
+  box-si
+}
