--- a/frontend/formacao-html-e-css/html5-css3-primeiros-passos/style.css
+++ b/frontend/formacao-html-e-css/html5-css3-primeiros-passos/style.css
@@ -1,3 +1,38 @@
+header {
+  background: #BBBBBB;
+  padding: 20px 0;
+}
+
+.header-box {
+  position: relative;
+  width: 940px;
+  margin: 0 auto;
+}
+
+nav {
+  position: absolute;
+  top: 110px;
+  right: 0;
+}
+
+nav li {
+  display: inline;
+  margin: 0 0 0 15px;
+}
+
+nav a {
+  color: #000000;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 22px;
+}
+
+nav a:hover {
+  color: #FFDB58;
+  text-decoration: underline;
+}
+
 #banner {
   width: 100%;
 }
@@ -40,4 +75,15 @@
 }
 .imagem-beneficios {
   width: 50%;
+}
+
+footer {
+  background: url("../html5-css3-posicionamento-listas-navegacao/bg.jpg");
+  text-align: center;
+  padding: 20px 0;
+}
+
+.copyright {
+  color: #FFFFFF;
+  font-size: 14px;
 }
